Fix gutter spacing on campaign pages
At the moment, the spacing in the gutters of campaign pages pull the 
page too far towards the left on desktop. On mobile, the padding is too
much. In both cases, the edges of the campaign page do not line up with 
the GOV.UK logo and search box in the header.

This fixes the padding based on values used for quick answers and 
guides.

--- a/app/assets/stylesheets/views/_campaigns.scss
+++ b/app/assets/stylesheets/views/_campaigns.scss
@@ -4,7 +4,7 @@ main.campaign {
     float: none;
     display: block;
     max-width: 960px;
-    margin: 0 1em;
+    margin: 0 32px;
     background-color: #fff;
 
     @include ie-lte(7) {
@@ -12,7 +12,7 @@ main.campaign {
     }
 
     @include media(mobile) {
-      margin: 0 $gutter;
+      margin: 0 1em;
     }
 
     h1,
